--- a/12_08.ipynb
+++ b/12_08.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "HkIPuT1BDdIx"
       },
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "3fWYGlO4EgJH"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
         "id": "8XHoqxsiMDEz",
         "outputId": "5da854ec-7544-4f1d-c49c-34b45a244476"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,6 +100,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*Comparison:*\n",
+        "Both algorithms have the same time complexity of O(log₁₀(n)), where n is the number that needs to be reversed.Generally division-based solution more efficient in terms of time complexity because it processes each digit directly without converting to a string. String-based solution uses more memory due to the creation of a new string. String-based algorithm is shorter and easier to understand and implement."
+      ],
+      "metadata": {
+        "id": "rgxZgxA1NnpT"
+      }
     },
     {
       "cell_type": "markdown",
@@ -126,7 +136,7 @@
       "metadata": {
         "id": "KGtSBATPFJtJ"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +152,7 @@
       "metadata": {
         "id": "dRMiLy7MHFfb"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +167,7 @@
         "id": "1xBZRYG9HvtU",
         "outputId": "52ee69a0-ea7c-4374-ba37-7dc1d1b93455"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
