--- a/12_08.ipynb
+++ b/12_08.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "    new_value_str = value_str[::-1]\n",
         "\n",
-        "    return int(new_value_str)"
+        "    return int(value_str[::-1])"
       ],
       "metadata": {
         "id": "3fWYGlO4EgJH"
@@ -84,10 +84,123 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 193
         },
         "id": "8XHoqxsiMDEz",
-        "outputId": "5da854ec-7544-4f1d-c49c-34b45a244476"
+        "outputId": "4104efe8-0ce9-42e0-bb8f-7051917001c1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "invalid literal for int() with base 10: ''",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-4ec86adc8b07>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdivision\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "small = [random.randint(0, 2**8) for i in range(100000)]\n",
+        "medium = [random.randint(2**8, 2**16) for i in range(100000)]\n",
+        "long_ = [random.randint(2**16, 2**32) for i in range(100000)]\n",
+        "long_long = [random.randint(2**32, 2**64) for i in range(100000)]\n",
+        "extra = [random.randint(2**70, 2**100) for i in range(100000)]\n",
+        "all = small + medium + long_ + long_long + extra"
+      ],
+      "metadata": {
+        "id": "UGeEkHXhiO_r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "\n",
+        "def check_time(reverse):\n",
+        "    start = time.time()\n",
+        "\n",
+        "    for i in small:\n",
+        "        reverse(i)\n",
+        "\n",
+        "    end = time.time() - start\n",
+        "    print(\"small:\", end)\n",
+        "\n",
+        "    start = time.time()\n",
+        "\n",
+        "    for i in medium:\n",
+        "        reverse(i)\n",
+        "\n",
+        "    end = time.time() - start\n",
+        "    print(\"medium:\", end)\n",
+        "\n",
+        "    start = time.time()\n",
+        "\n",
+        "    for i in long_:\n",
+        "        reverse(i)\n",
+        "\n",
+        "    end = time.time() - start\n",
+        "    print(\"long_:\", end)\n",
+        "\n",
+        "    start = time.time()\n",
+        "\n",
+        "    for i in long_long:\n",
+        "        reverse(i)\n",
+        "\n",
+        "    end = time.time() - start\n",
+        "    print(\"long_long:\", end)\n",
+        "\n",
+        "    start = time.time()\n",
+        "\n",
+        "    for i in extra:\n",
+        "        reverse(i)\n",
+        "\n",
+        "    end = time.time() - start\n",
+        "    print(\"extra:\", end)\n",
+        "\n",
+        "    start = time.time()\n",
+        "\n",
+        "    for i in all:\n",
+        "        reverse(i)\n",
+        "\n",
+        "    end = time.time() - start\n",
+        "    print(\"all:\", end)"
+      ],
+      "metadata": {
+        "id": "umUYp_c4ktA4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "check_time(string)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aA0McAyIu2gg",
+        "outputId": "0f41f414-7c2c-45fe-c9d1-1357d31f0124"
       },
       "execution_count": null,
       "outputs": [
@@ -95,8 +208,40 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "548627\n",
-            "726845 726845\n"
+            "small: 0.05957937240600586\n",
+            "medium: 0.06644773483276367\n",
+            "long_: 0.06357741355895996\n",
+            "long_long: 0.0672299861907959\n",
+            "extra: 0.08228516578674316\n",
+            "all: 0.31875038146972656\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "check_time(division)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MEVerbPUvbic",
+        "outputId": "3891868e-5035-4c03-dc28-dde96f18a71a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "small: 0.051111698150634766\n",
+            "medium: 0.08738923072814941\n",
+            "long_: 0.17816591262817383\n",
+            "long_long: 0.4256248474121094\n",
+            "extra: 0.705742597579956\n",
+            "all: 1.4086532592773438\n"
           ]
         }
       ]
@@ -105,7 +250,7 @@
       "cell_type": "markdown",
       "source": [
         "*Comparison:*\n",
-        "Both algorithms have the same time complexity of O(log₁₀(n)), where n is the number that needs to be reversed.Generally division-based solution more efficient in terms of time complexity because it processes each digit directly without converting to a string. String-based solution uses more memory due to the creation of a new string. String-based algorithm is shorter and easier to understand and implement."
+        "Both algorithms have the same time complexity of *O(log₁₀(n))*, where n is the number that needs to be reversed. But, based on the results of the *check_time()* function, which measures the execution time of a function, it can be observed that when the length of the numbers doubles, the execution time of the division-based algorithm increases accordingly and the string-based algorithm does not depend on the length of the numbers and is depends only on their quantity. String-based algorithm is shorter and easier to understand and implement."
       ],
       "metadata": {
         "id": "rgxZgxA1NnpT"
