--- a/notebooks/12_08.ipynb
+++ b/notebooks/12_08.ipynb
@@ -20,12 +20,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 18,
       "metadata": {
         "id": "HkIPuT1BDdIx"
       },
       "outputs": [],
       "source": [
+        "@jit\n",
         "def division(value):\n",
         "    new_value = 0\n",
         "\n",
@@ -47,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 4,
       "metadata": {
         "id": "3fWYGlO4EgJH"
       },
@@ -63,27 +64,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 21,
       "metadata": {
         "id": "UGeEkHXhiO_r"
       },
       "outputs": [],
       "source": [
         "import random\n",
+        "import numpy as np\n",
         "\n",
         "small = [random.randint(0, 10**2) for i in range(100000)]\n",
         "medium = [random.randint(10**2, 10**4) for i in range(100000)]\n",
         "long_ = [random.randint(10**4, 10**8) for i in range(100000)]\n",
         "long_long = [random.randint(10**8, 10**16) for i in range(100000)]\n",
         "extra = [random.randint(10**16, 10**32) for i in range(100000)]\n",
-        "all = small + medium + long_ + long_long + extra\n",
+        "nint = [random.randint(2**32, 2**55) for i in range(100000)]\n",
+        "npint = np.array(nint, dtype = 'int64')\n",
+        "all = small + medium + long_ + long_long + extra \n",
         "\n",
-        "values = ['small', 'medium', 'long_', 'long_long', 'extra', 'all']"
+        "values = [ 'npint']"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 22,
       "metadata": {
         "id": "iQjbyuBLL8cq"
       },
@@ -106,7 +110,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from numba import jit"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,22 +132,17 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "small: 0.35816807299988795\n",
-            "medium: 0.3383063530000072\n",
-            "long_: 0.37392545000011523\n",
-            "long_long: 0.4504871560002357\n",
-            "extra: 0.5620988589998888\n",
-            "all: 1.9999725479997323\n"
+            "npint: 1.140853069999821\n"
           ]
         }
       ],
       "source": [
-        "str_time =check_time(\"string\", values)"
+        "str_time = check_time(\"string\", values)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -147,17 +155,32 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "small: 0.11744690600016838\n",
-            "medium: 0.23556663199997274\n",
-            "long_: 0.5153603350004232\n",
-            "long_long: 1.5530432689997724\n",
-            "extra: 4.098696595999627\n",
-            "all: 6.3788769739999225\n"
+            "npint: 0.9623689739999008\n"
           ]
         }
       ],
       "source": [
         "div_time = check_time(\"division\", values)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "36028797018963968"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "2**55"
       ]
     },
     {
