model validation and evaluation

--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -2,27 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "02729974-8f15-4134-addc-c7f3f902bf18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np \n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import GridSearchCV, KFold, TimeSeriesSplit, cross_val_score\n",
+    "from sklearn.model_selection import GridSearchCV, TimeSeriesSplit, cross_val_score\n",
     "from sklearn import svm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "459ffae9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cross_val(estimator, X, y, p_grid, inner_splits=5, outer_splits=5, inner_gap=3, outer_gap=3):\n",
-    "    inner_cv = TimeSeriesSplit(n_splits=inner_splits, gap=inner_gap)\n",
-    "    outer_cv = TimeSeriesSplit(n_splits=outer_splits, gap=outer_gap)\n",
+    "def cross_val(estimator, X, y, p_grid, inner_splits=5, outer_splits=5, inner_gap=3, outer_gap=3, lag = 30):\n",
+    "    inner_cv = TimeSeriesSplit(n_splits=inner_splits, gap=inner_gap, test_size=lag)\n",
+    "    outer_cv = TimeSeriesSplit(n_splits=outer_splits, gap=outer_gap, test_size=lag)\n",
     "\n",
     "    # Nested CV with parameter optimization\n",
     "    model = GridSearchCV(estimator=estimator, \n",
@@ -38,8 +37,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fb26fb6",
+   "metadata": {},
+   "source": [
+    "a small code to test the function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "32f0308a",
    "metadata": {},
    "outputs": [
@@ -47,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.7997433763398847\n"
+      "-0.777866656214605\n"
      ]
     }
    ],
@@ -55,28 +62,15 @@
     "from sklearn.datasets import fetch_california_housing\n",
     "\n",
     "housing = fetch_california_housing()\n",
-    "X = housing.data\n",
-    "y = housing.target\n",
-    "data = pd.concat([pd.DataFrame(X), pd.DataFrame(y).rename(columns={0: \"target\"})], axis=1).sample(frac=1).reset_index(drop=True)\n",
+    "data = pd.concat([pd.DataFrame(housing.data), pd.DataFrame(housing.target).rename(columns={0: \"target\"})], axis=1).reset_index(drop=True)\n",
     "X = data[[0, 1, 2, 3]].head(500)\n",
     "y = data[\"target\"].head(500)\n",
     "\n",
     "reg = svm.SVR()\n",
-    "\n",
-    "# Set up possible values of parameters to optimize over\n",
     "p_grid = {\"C\": [1, 10], \"gamma\": [0.01, 0.1]}\n",
     "\n",
-    "cross_val(reg, X, y, p_grid)\n",
-    "# housing.data"
+    "cross_val(reg, X, y, p_grid)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfad45ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
