--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -14,25 +14,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "459ffae9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cross_val(estimator, X, y, p_grid, inner_splits=5, outer_splits=5, inner_gap=3, outer_gap=3, lag = 30):\n",
-    "    inner_cv = TimeSeriesSplit(n_splits=inner_splits, gap=inner_gap, test_size=lag)\n",
-    "    outer_cv = TimeSeriesSplit(n_splits=outer_splits, gap=outer_gap, test_size=lag)\n",
+    "def cross_val(estimator, X, y, p_grid, inner_splits=5, outer_splits=5, inner_gap=3, outer_gap=3, test_size = 30):\n",
+    "    inner_cv = TimeSeriesSplit(n_splits=inner_splits, gap=inner_gap, test_size=test_size)\n",
+    "    outer_cv = TimeSeriesSplit(n_splits=outer_splits, gap=outer_gap, test_size=test_size)\n",
     "\n",
-    "    # Nested CV with parameter optimization\n",
     "    model = GridSearchCV(estimator=estimator, \n",
     "                         param_grid=p_grid, \n",
     "                         cv=inner_cv, \n",
     "                         scoring='neg_root_mean_squared_error')\n",
+    "    \n",
     "    nested_score = cross_val_score(model, \n",
     "                                   X=X, \n",
     "                                   y=y, \n",
     "                                   cv=outer_cv, \n",
     "                                   scoring='neg_root_mean_squared_error')\n",
+    "    \n",
+    "    \n",
     "    print(nested_score.mean())"
    ]
   },
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "32f0308a",
    "metadata": {},
    "outputs": [
@@ -89,7 +91,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
