--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../data/raw'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m os\u001b[38;5;241m.\u001b[39mchdir(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/raw\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m os\u001b[38;5;241m.\u001b[39mgetcwd()\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/raw'"
-     ]
+     "data": {
+      "text/plain": [
+       "'/root/restaurants/data/raw'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "air_visit_data = pd.read_csv(\"air_visit_data.csv\")\n",
-    "air_visit_data['visit_date'] = pd.to_datetime(air_visit_data['visit_date'])"
+    "# air_visit_data['visit_date'] = pd.to_datetime(air_visit_data['visit_date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,23 +135,23 @@
        "</div>"
       ],
       "text/plain": [
-       "    visit_date  visitors\n",
-       "0   2016-01-13      25.0\n",
-       "1   2016-01-14      32.0\n",
-       "2   2016-01-15      29.0\n",
-       "3   2016-01-16      22.0\n",
-       "4   2016-01-18       6.0\n",
-       "..         ...       ...\n",
-       "386 2017-04-18      11.0\n",
-       "387 2017-04-19      11.0\n",
-       "388 2017-04-20      14.0\n",
-       "389 2017-04-21      40.0\n",
-       "390 2017-04-22      23.0\n",
+       "     visit_date  visitors\n",
+       "0    2016-01-13      25.0\n",
+       "1    2016-01-14      32.0\n",
+       "2    2016-01-15      29.0\n",
+       "3    2016-01-16      22.0\n",
+       "4    2016-01-18       6.0\n",
+       "..          ...       ...\n",
+       "386  2017-04-18      11.0\n",
+       "387  2017-04-19      11.0\n",
+       "388  2017-04-20      14.0\n",
+       "389  2017-04-21      40.0\n",
+       "390  2017-04-22      23.0\n",
        "\n",
        "[391 rows x 2 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,108 +174,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cross_val(estimator, X, y, p_grid, inner_splits=5, outer_splits=5, inner_gap=3, outer_gap=3, test_size = 30):\n",
-    "    inner_cv = TimeSeriesSplit(n_splits=inner_splits, gap=inner_gap, test_size=test_size)\n",
-    "    outer_cv = TimeSeriesSplit(n_splits=outer_splits, gap=outer_gap, test_size=test_size)\n",
-    "\n",
-    "    model = GridSearchCV(estimator=estimator, \n",
-    "                         param_grid=p_grid, \n",
-    "                         cv=inner_cv, \n",
-    "                         scoring='neg_root_mean_squared_error')\n",
-    "    \n",
-    "    cv_results = cross_validate(model, \n",
-    "                                X=X, \n",
-    "                                y=y, \n",
-    "                                cv=outer_cv, \n",
-    "                                scoring='neg_root_mean_squared_error',\n",
-    "                                return_estimator=True)\n",
-    "    \n",
-    "    \n",
-    "    # print(cv_results['test_score'].mean())\n",
-    "    return cv_results\n",
-    "    # print(cv_results)"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import GridSearchCV, TimeSeriesSplit, cross_val_score\n",
+    "from sklearn import svm\n",
+    "from sklearn.metrics import root_mean_squared_log_error\n",
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from eval import my_nested_cv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prophet import Prophet\n",
+    "import logging\n",
+    "logging.getLogger(\"prophet\").setLevel(logging.ERROR)\n",
+    "logging.getLogger(\"cmdstanpy\").disabled=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'constant': None, 'quantile': None, 'strategy': 'mean'}\n",
-      "{'constant': None, 'quantile': None, 'strategy': 'mean'}\n",
-      "{'constant': None, 'quantile': None, 'strategy': 'median'}\n",
-      "{'constant': None, 'quantile': None, 'strategy': 'median'}\n",
-      "{'constant': None, 'quantile': None, 'strategy': 'median'}\n"
+      "NestedCV: 1 of outer fold 5\n",
+      "Score: 0.5590467271383507 \n",
+      "\n",
+      "NestedCV: 2 of outer fold 5\n",
+      "Score: 0.5696546826206523 \n",
+      "\n",
+      "NestedCV: 3 of outer fold 5\n",
+      "Score: 0.3571747724269832 \n",
+      "\n",
+      "NestedCV: 4 of outer fold 5\n",
+      "Score: 0.49526026387310573 \n",
+      "\n",
+      "NestedCV: 5 of outer fold 5\n",
+      "Score: 0.3881454795816534 \n",
+      "\n",
+      "Overall test performance: 0.4738563851281491\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'fit_time': array([0.09828091, 0.07845545, 0.05742097, 0.05319786, 0.04924345]),\n",
-       " 'score_time': array([0.00168228, 0.00254846, 0.00217724, 0.00137591, 0.00173116]),\n",
-       " 'estimator': [GridSearchCV(cv=TimeSeriesSplit(gap=3, max_train_size=None, n_splits=5, test_size=30),\n",
-       "               estimator=DummyRegressor(),\n",
-       "               param_grid={'strategy': ['mean', 'median']},\n",
-       "               scoring='neg_root_mean_squared_error'),\n",
-       "  GridSearchCV(cv=TimeSeriesSplit(gap=3, max_train_size=None, n_splits=5, test_size=30),\n",
-       "               estimator=DummyRegressor(),\n",
-       "               param_grid={'strategy': ['mean', 'median']},\n",
-       "               scoring='neg_root_mean_squared_error'),\n",
-       "  GridSearchCV(cv=TimeSeriesSplit(gap=3, max_train_size=None, n_splits=5, test_size=30),\n",
-       "               estimator=DummyRegressor(),\n",
-       "               param_grid={'strategy': ['mean', 'median']},\n",
-       "               scoring='neg_root_mean_squared_error'),\n",
-       "  GridSearchCV(cv=TimeSeriesSplit(gap=3, max_train_size=None, n_splits=5, test_size=30),\n",
-       "               estimator=DummyRegressor(),\n",
-       "               param_grid={'strategy': ['mean', 'median']},\n",
-       "               scoring='neg_root_mean_squared_error'),\n",
-       "  GridSearchCV(cv=TimeSeriesSplit(gap=3, max_train_size=None, n_splits=5, test_size=30),\n",
-       "               estimator=DummyRegressor(),\n",
-       "               param_grid={'strategy': ['mean', 'median']},\n",
-       "               scoring='neg_root_mean_squared_error')],\n",
-       " 'test_score': array([-12.82723013, -12.7454849 , -12.15730233, -13.16814338,\n",
-       "        -11.61895004])}"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn import svm\n",
+    "reg = Prophet\n",
     "\n",
-    "reg = svm.SVR()\n",
-    "p_grid = {\"C\": [1, 10], \"gamma\": [0.01, 0.1]}\n",
+    "param_grid = {  \n",
+    "    'changepoint_prior_scale': [0.001, 0.01, 0.1, 0.5],\n",
+    "    'seasonality_prior_scale': [0.01, 0.1, 1.0, 10.0],\n",
+    "}\n",
     "\n",
-    "reg = DummyRegressor()\n",
-    "\n",
-    "p_grid = {\"strategy\": [\"mean\", \"median\"]}\n",
-    "\n",
-    "reg = cross_val(reg, X, y, p_grid)\n",
-    "# reg.predict(X)\n",
-    "print(reg['estimator'][0].best_estimator_.get_params())\n",
-    "print(reg['estimator'][1].best_estimator_.get_params())\n",
-    "print(reg['estimator'][2].best_estimator_.get_params())\n",
-    "print(reg['estimator'][3].best_estimator_.get_params())\n",
-    "print(reg['estimator'][4].best_estimator_.get_params())\n",
-    "reg\n"
+    "my_nested_cv(reg, X, y, param_grid)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NestedCV: 1 of outer fold 5\n",
+      "Score: 0.7774891990598184 \n",
+      "\n",
+      "NestedCV: 2 of outer fold 5\n",
+      "Score: 0.6801533092102668 \n",
+      "\n",
+      "NestedCV: 3 of outer fold 5\n",
+      "Score: 0.8549704479338557 \n",
+      "\n",
+      "NestedCV: 4 of outer fold 5\n",
+      "Score: 0.8783354107953781 \n",
+      "\n",
+      "NestedCV: 5 of outer fold 5\n",
+      "Score: 0.826168015493569 \n",
+      "\n",
+      "Overall test performance: 0.8034232764985776\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg = DummyRegressor\n",
+    "\n",
+    "p_grid = {\"strategy\": [\"mean\", \"median\"]}\n",
+    "\n",
+    "my_nested_cv(reg, X, y, p_grid)"
+   ]
   }
  ],
  "metadata": {
