--- a/notebooks/feature engineering.ipynb
+++ b/notebooks/feature engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "'/root/restaurants/data/raw'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "4  air_ba937bf13d40fb24  2016-01-18         6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "4  2016      7    6  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,6 +323,31 @@
     "    if column_name in df.columns:\n",
     "        return df\n",
     "\n",
+    "    def compute_rolling(group):\n",
+    "        group[column_name] = (\n",
+    "            group[[\"date\", \"visitors\"]]\n",
+    "            .rolling(f\"{lag}D\", on=\"date\", min_periods=1)\n",
+    "            .mean()[\"visitors\"]\n",
+    "        )\n",
+    "        return group\n",
+    "\n",
+    "    df = df.groupby([\"store_id\", column], group_keys=False).apply(compute_rolling)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_lag_old(df, lag, column):\n",
+    "    column_name = \"lag_\" + column + \"_\" + str(lag)\n",
+    "\n",
+    "    if column_name in df.columns:\n",
+    "        return df\n",
+    "\n",
     "    lag_data = []\n",
     "\n",
     "    for (store_id, col_val), temp in df.groupby([\"store_id\", column]):\n",
@@ -344,7 +369,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n",
+      "/tmp/ipykernel_2774/616541963.py:11: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "  df = df.groupby(['store_id', column], group_keys=False).apply(compute_rolling)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "103.39223652100009"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "\n",
+    "def check_new():\n",
+    "    add_lag(data, 21, \"day_of_week\")\n",
+    "\n",
+    "\n",
+    "timeit.timeit(check_new, number=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "138.72039928900085"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def check_old():\n",
+    "    add_lag_old(data, 21, \"day_of_week\")\n",
+    "\n",
+    "\n",
+    "timeit.timeit(check_old, number=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,10 +465,11 @@
     "        ]\n",
     "        area_genre_data = area_genre_data.sort_values(\"date\")\n",
     "        area_genre_data_mean = area_genre_data.groupby(by=[\"date\"]).visitors.mean()\n",
-    "        area_genre_data = area_genre_data.drop(columns=[\"visitors\"])\n",
-    "        area_genre_data = area_genre_data.merge(\n",
-    "            area_genre_data_mean, on=[\"date\"], how=\"right\"\n",
-    "        ).drop_duplicates()\n",
+    "        area_genre_data = (\n",
+    "            area_genre_data.drop(columns=[\"visitors\"])\n",
+    "            .merge(area_genre_data_mean, on=[\"date\"], how=\"right\")\n",
+    "            .drop_duplicates()\n",
+    "        )\n",
     "\n",
     "        for col_val, temp in area_genre_data.groupby(column):\n",
     "            temp_rolled = (\n",
@@ -383,16 +486,89 @@
     "\n",
     "    lag_data = pd.concat(lag_data)\n",
     "\n",
-    "    return df.merge(lag_data, on=[\"area_name\", \"genre_name\", \"date\"], how=\"left\")\n"
+    "    return df.merge(lag_data, on=[\"area_name\", \"genre_name\", \"date\"], how=\"left\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_data = deepcopy(data)"
+    "def get_area_genre_lag2(df, lag, column):\n",
+    "    column_name = \"lag_area_genre_\" + column + \"_\" + str(lag)\n",
+    "\n",
+    "    if column_name in df.columns:\n",
+    "        return df\n",
+    "\n",
+    "    lag_data = []\n",
+    "\n",
+    "    df = df.groupby([\"area_name\", \"genre_name\"]).apply()\n",
+    "    for (area_name, genre_name), area_genre_data in df.groupby(\n",
+    "        [\"area_name\", \"genre_name\"]\n",
+    "    ):\n",
+    "        area_genre_data = area_genre_data[\n",
+    "            [\"area_name\", \"genre_name\", \"date\", \"visitors\", column]\n",
+    "        ]\n",
+    "        area_genre_data = area_genre_data.sort_values(\"date\")\n",
+    "        area_genre_data_mean = area_genre_data.groupby(by=[\"date\"]).visitors.mean()\n",
+    "        area_genre_data = (\n",
+    "            area_genre_data.drop(columns=[\"visitors\"])\n",
+    "            .merge(area_genre_data_mean, on=[\"date\"], how=\"right\")\n",
+    "            .drop_duplicates()\n",
+    "        )\n",
+    "\n",
+    "        for col_val, temp in area_genre_data.groupby(column):\n",
+    "            temp_rolled = (\n",
+    "                temp[[\"date\", \"visitors\"]]\n",
+    "                .rolling(f\"{lag}D\", on=\"date\", min_periods=1)\n",
+    "                .mean()\n",
+    "            )\n",
+    "            temp_rolled[\"area_name\"] = area_name\n",
+    "            temp_rolled[\"genre_name\"] = genre_name\n",
+    "            temp_rolled[column_name] = temp_rolled[\"visitors\"]\n",
+    "            temp_rolled = temp_rolled.drop(columns=\"visitors\")\n",
+    "\n",
+    "            lag_data.append(temp_rolled)\n",
+    "\n",
+    "    lag_data = pd.concat(lag_data)\n",
+    "\n",
+    "    return df.merge(lag_data, on=[\"area_name\", \"genre_name\", \"date\"], how=\"left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = deepcopy(data)\n",
+    "new_data = add_lag(new_data, 21, \"day_of_week\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "THREE_WEEKS = 21\n",
+    "FIVE_WEEKS = 35\n",
+    "TWO_MONTH = 61\n",
+    "ONE_QUARTER = 365 // 4\n",
+    "HALF_YEAR = 365 // 2\n",
+    "THREE_QUARTERS = 365 * 3 // 4\n",
+    "YEAR = 365\n",
+    "\n",
+    "LAGS = [\n",
+    "    THREE_WEEKS,\n",
+    "    FIVE_WEEKS,\n",
+    "    TWO_MONTH,\n",
+    "    ONE_QUARTER,\n",
+    "    HALF_YEAR,\n",
+    "    THREE_QUARTERS,\n",
+    "    YEAR,\n",
+    "]"
    ]
   },
   {
@@ -817,7 +993,7 @@
    "source": [
     "new_data = deepcopy(data)\n",
     "\n",
-    "for lag in [21, 35, 63, 140, 280, 350]:\n",
+    "for lag in LAGS:\n",
     "    new_data = get_area_genre_lag(new_data, lag, \"day_of_week\")\n",
     "    new_data = get_area_genre_lag(new_data, lag, \"holiday_flg\")\n",
     "    new_data = add_lag(new_data, lag, \"day_of_week\")\n",
@@ -1016,7 +1192,6 @@
     }
    ],
    "source": [
-    "\n",
     "# df = deepcopy(data)\n",
     "df = data[[\"visitors\", \"holiday_flg\", \"year\", \"month\", \"day\", \"store_id\", \"date\"]].head(\n",
     "    2000\n",
