--- a/notebooks/12_08.ipynb
+++ b/notebooks/12_08.ipynb
@@ -319,7 +319,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "analytics",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
